// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dark mode when preferred dark mode is off should enable dark mode in the ui 1`] = `
<div
  class="flex flex-col dark"
  data-testid="app-container"
>
  <div
    class="bg-blue-400 h-screen text-gray-100 dark:text-gray-400 dark:bg-gray-600"
  >
    <div
      class="bg-blue-900 flex justify-between p-5 dark:bg-gray-700"
    >
      <div
        class="flex"
      >
        <h2
          class="text-yellow-400 font-bold"
        >
          <a
            data-testid="to-home"
            href="#/"
          >
            JSON tool
          </a>
        </h2>
         |
        <a
          href="https://github.com/marabesi/json-tool"
          rel="noreferrer"
          target="_blank"
        >
          by marabesi
        </a>
        <a
          class="ml-14"
          href="https://github.com/marabesi/json-tool/discussions/72"
          rel="noreferrer"
          target="_blank"
        >
          What feature are you missing?
        </a>
      </div>
      <div
        class="flex items-center"
      >
        <div
          class="mr-5"
          style="position: relative; display: inline-block; text-align: left; opacity: 1; direction: ltr; border-radius: 9px; transition: opacity 0.25s; user-select: none;"
        >
          <div
            class="react-switch-bg"
            style="height: 18px; width: 50px; margin: 0px; position: relative; border-radius: 9px; cursor: pointer; transition: background 0.25s; background: rgb(30, 58, 138);"
          />
          <div
            class="react-switch-handle"
            style="height: 16px; width: 16px; background: rgb(255, 255, 255); display: inline-block; cursor: pointer; border-radius: 50%; position: absolute; transform: translateX(33px); top: 1px; outline: 0; border: 0px; transition: background-color 0.25s, transform 0.25s, box-shadow 0.15s;"
          />
          <input
            aria-checked="true"
            checked=""
            data-testid="dark-mode"
            role="switch"
            style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
            type="checkbox"
          />
        </div>
        <a
          class="flex items-center mr-5"
          data-testid="settings"
          href="#/settings"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M494.2 221.9l-59.8-40.5 13.7-71c2.6-13.2-1.6-26.8-11.1-36.4-9.6-9.5-23.2-13.7-36.2-11.1l-70.9 13.7-40.4-59.9c-15.1-22.3-51.9-22.3-67 0l-40.4 59.9-70.8-13.7C98 60.4 84.5 64.5 75 74.1c-9.5 9.6-13.7 23.1-11.1 36.3l13.7 71-59.8 40.5C6.6 229.5 0 242 0 255.5s6.7 26 17.8 33.5l59.8 40.5-13.7 71c-2.6 13.2 1.6 26.8 11.1 36.3 9.5 9.5 22.9 13.7 36.3 11.1l70.8-13.7 40.4 59.9C230 505.3 242.6 512 256 512s26-6.7 33.5-17.8l40.4-59.9 70.9 13.7c13.4 2.7 26.8-1.6 36.3-11.1 9.5-9.5 13.6-23.1 11.1-36.3l-13.7-71 59.8-40.5c11.1-7.5 17.8-20.1 17.8-33.5-.1-13.6-6.7-26.1-17.9-33.7zm-112.9 85.6l17.6 91.2-91-17.6L256 458l-51.9-77-90.9 17.6 17.6-91.2-76.8-52 76.8-52-17.6-91.2 91 17.6L256 53l51.9 76.9 91-17.6-17.6 91.1 76.8 52-76.8 52.1zM256 152c-57.3 0-104 46.7-104 104s46.7 104 104 104 104-46.7 104-104-46.7-104-104-104zm0 160c-30.9 0-56-25.1-56-56s25.1-56 56-56 56 25.1 56 56-25.1 56-56 56z"
            />
          </svg>
        </a>
        <a
          class="flex items-center"
          data-testid="buy-me-a-coffee"
          href="https://www.buymeacoffee.com/marabesi"
          rel="noreferrer"
          target="_blank"
        >
          <svg
            class="mr-2"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 640 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
            />
          </svg>
          <span>
            Buy me a coffee
          </span>
        </a>
      </div>
    </div>
    <div
      class="p-1 mb-8 pb-8 h-full"
      style="height: 80vh;"
    >
      <label
        for="is-validate-json"
      >
        validate json
      </label>
      <input
        checked=""
        data-testid="is-validate-json"
        id="is-validate-json"
        type="checkbox"
      />
      <div
        class="flex h-full justify-center p-1"
        data-testid="editor-container"
      >
        <div
          class="flex flex-col h-full m-1"
          style="width: 49vw;"
        >
          <div
            class="flex w-full justify-start items-center m-2 ml-0 h-10"
          >
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none hover:bg-blue-800 dark:hover:bg-gray-800 "
              data-testid="search-json"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
            </button>
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none cursor-not-allowed ml-0 flex items-center"
              data-testid="paste-from-clipboard"
              disabled=""
              title="Paste from clipboard is disabled due lack of browser support"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 384 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M336 64h-80c0-35.3-28.7-64-64-64s-64 28.7-64 64H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48zM192 40c13.3 0 24 10.7 24 24s-10.7 24-24 24-24-10.7-24-24 10.7-24 24-24zm144 418c0 3.3-2.7 6-6 6H54c-3.3 0-6-2.7-6-6V118c0-3.3 2.7-6 6-6h42v36c0 6.6 5.4 12 12 12h168c6.6 0 12-5.4 12-12v-36h42c3.3 0 6 2.7 6 6z"
                />
              </svg>
              Paste from clipboard
            </button>
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none hover:bg-blue-800 dark:hover:bg-gray-800 ml-0 flex items-center"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 384 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M128.3 160v32h32v-32zm64-96h-32v32h32zm-64 32v32h32V96zm64 32h-32v32h32zm177.6-30.1L286 14C277 5 264.8-.1 252.1-.1H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48V131.9c0-12.7-5.1-25-14.1-34zM256 51.9l76.1 76.1H256zM336 464H48V48h79.7v16h32V48H208v104c0 13.3 10.7 24 24 24h104zM194.2 265.7c-1.1-5.6-6-9.7-11.8-9.7h-22.1v-32h-32v32l-19.7 97.1C102 385.6 126.8 416 160 416c33.1 0 57.9-30.2 51.5-62.6zm-33.9 124.4c-17.9 0-32.4-12.1-32.4-27s14.5-27 32.4-27 32.4 12.1 32.4 27-14.5 27-32.4 27zm32-198.1h-32v32h32z"
                />
              </svg>
              <input
                accept="application/json"
                data-testid="upload-json"
                type="file"
              />
            </button>
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none hover:bg-blue-800 dark:hover:bg-gray-800 flex items-center"
              data-testid="clean"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M268 416h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12zM432 80h-82.41l-34-56.7A48 48 0 0 0 274.41 0H173.59a48 48 0 0 0-41.16 23.3L98.41 80H16A16 16 0 0 0 0 96v16a16 16 0 0 0 16 16h16v336a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128h16a16 16 0 0 0 16-16V96a16 16 0 0 0-16-16zM171.84 50.91A6 6 0 0 1 177 48h94a6 6 0 0 1 5.15 2.91L293.61 80H154.39zM368 464H80V128h288zm-212-48h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12z"
                />
              </svg>
              Delete all
            </button>
          </div>
          <textarea
            class="hidden"
            data-testid="raw-json"
          />
          <div
            class="cm-theme-dark  h-full"
            data-testid="json"
            style="background-color: rgb(229, 231, 235); overflow-y: hidden; font-family: ui-monospace,SFMono-Regular,SF Mono,Consolas,Liberation Mono,Menlo,monospace; font-size: 12px;"
          >
            <div
              class="cm-editor ͼ1 ͼ3 ͼ4 ͼ23 ͼo"
            >
              <div
                aria-live="polite"
                style="position: fixed; top: -10000px;"
              />
              <div
                class="cm-scroller"
                tabindex="-1"
              >
                <div
                  aria-hidden="true"
                  class="cm-gutters"
                  style="min-height: 14px; position: sticky;"
                >
                  <div
                    class="cm-gutter cm-lineNumbers"
                  >
                    <div
                      class="cm-gutterElement"
                      style="height: 0px; visibility: hidden; pointer-events: none;"
                    >
                      9
                    </div>
                    <div
                      class="cm-gutterElement cm-activeLineGutter"
                      style="height: 14px; margin-top: 4px;"
                    >
                      1
                    </div>
                  </div>
                  <div
                    class="cm-gutter cm-foldGutter"
                  >
                    <div
                      class="cm-gutterElement"
                      style="height: 0px; visibility: hidden; pointer-events: none;"
                    >
                      <span
                        title="Unfold line"
                      >
                        ›
                      </span>
                    </div>
                    <div
                      class="cm-gutterElement cm-activeLineGutter"
                      style="height: 14px; margin-top: 4px;"
                    />
                  </div>
                </div>
                <div
                  aria-multiline="true"
                  autocapitalize="off"
                  autocorrect="off"
                  class="cm-content"
                  contenteditable="true"
                  data-language="json"
                  role="textbox"
                  spellcheck="false"
                  style="tab-size: 4;"
                  translate="no"
                >
                  <div
                    class="cm-activeLine cm-line"
                  >
                    <br />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="cm-layer cm-layer-above cm-cursorLayer"
                  style="z-index: 150; animation-duration: 1200ms;"
                />
                <div
                  aria-hidden="true"
                  class="cm-layer cm-selectionLayer"
                  style="z-index: -2;"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="w-12 flex justify-center items-center"
        >
          <div
            class="h-6 w-6"
          />
        </div>
        <div
          class="flex flex-col h-full m-1"
          style="width: 49vw;"
        >
          <div
            class="flex justify-start items-center m-2 ml-0 h-10"
          >
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none hover:bg-blue-800 dark:hover:bg-gray-800 "
              data-testid="search-result"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
            </button>
            <div
              class="flex items-center"
            >
              <span
                class="mr-2"
              >
                Space tabulation
              </span>
              <input
                class="w-10 rounded mr-2 p-1 bg-blue-300 dark:bg-gray-500"
                data-testid="space-size"
                type="text"
                value="2"
              />
            </div>
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none hover:bg-blue-800 dark:hover:bg-gray-800 flex items-center"
              data-testid="clean-spaces"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 640 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M576 64H205.26A63.97 63.97 0 0 0 160 82.75L9.37 233.37c-12.5 12.5-12.5 32.76 0 45.25L160 429.25c12 12 28.28 18.75 45.25 18.75H576c35.35 0 64-28.65 64-64V128c0-35.35-28.65-64-64-64zm-84.69 254.06c6.25 6.25 6.25 16.38 0 22.63l-22.62 22.62c-6.25 6.25-16.38 6.25-22.63 0L384 301.25l-62.06 62.06c-6.25 6.25-16.38 6.25-22.63 0l-22.62-22.62c-6.25-6.25-6.25-16.38 0-22.63L338.75 256l-62.06-62.06c-6.25-6.25-6.25-16.38 0-22.63l22.62-22.62c6.25-6.25 16.38-6.25 22.63 0L384 210.75l62.06-62.06c6.25-6.25 16.38-6.25 22.63 0l22.62 22.62c6.25 6.25 6.25 16.38 0 22.63L429.25 256l62.06 62.06z"
                />
              </svg>
              Clean spaces
            </button>
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none hover:bg-blue-800 dark:hover:bg-gray-800 flex items-center"
              data-testid="clean-new-lines"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 640 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M257.981 272.971L63.638 467.314c-9.373 9.373-24.569 9.373-33.941 0L7.029 444.647c-9.357-9.357-9.375-24.522-.04-33.901L161.011 256 6.99 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L257.981 239.03c9.373 9.372 9.373 24.568 0 33.941zM640 456v-32c0-13.255-10.745-24-24-24H312c-13.255 0-24 10.745-24 24v32c0 13.255 10.745 24 24 24h304c13.255 0 24-10.745 24-24z"
                />
              </svg>
              Clean new lines
            </button>
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none hover:bg-blue-800 dark:hover:bg-gray-800 flex items-center"
              data-testid="clean-new-lines-and-spaces"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 640 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M192 256c61.9 0 112-50.1 112-112S253.9 32 192 32 80 82.1 80 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C51.6 288 0 339.6 0 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zM480 256c53 0 96-43 96-96s-43-96-96-96-96 43-96 96 43 96 96 96zm48 32h-3.8c-13.9 4.8-28.6 8-44.2 8s-30.3-3.2-44.2-8H432c-20.4 0-39.2 5.9-55.7 15.4 24.4 26.3 39.7 61.2 39.7 99.8v38.4c0 2.2-.5 4.3-.6 6.4H592c26.5 0 48-21.5 48-48 0-61.9-50.1-112-112-112z"
                />
              </svg>
              Clean new lines and spaces
            </button>
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none cursor-not-allowed flex items-center"
              data-testid="copy-json"
              disabled=""
              title="Copy json is disabled due lack of browser support"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
                />
              </svg>
              Copy json
            </button>
          </div>
          <textarea
            class="hidden"
            data-testid="raw-result"
          />
          <div
            class="cm-theme-dark result h-full"
            data-testid="result"
            style="background-color: rgb(229, 231, 235); overflow-y: hidden; font-family: ui-monospace,SFMono-Regular,SF Mono,Consolas,Liberation Mono,Menlo,monospace; font-size: 12px;"
          >
            <div
              class="cm-editor ͼ1 ͼ3 ͼ4 ͼ24 ͼo"
            >
              <div
                aria-live="polite"
                style="position: fixed; top: -10000px;"
              />
              <div
                class="cm-scroller"
                tabindex="-1"
              >
                <div
                  aria-hidden="true"
                  class="cm-gutters"
                  style="min-height: 14px; position: sticky;"
                >
                  <div
                    class="cm-gutter cm-lineNumbers"
                  >
                    <div
                      class="cm-gutterElement"
                      style="height: 0px; visibility: hidden; pointer-events: none;"
                    >
                      9
                    </div>
                    <div
                      class="cm-gutterElement cm-activeLineGutter"
                      style="height: 14px; margin-top: 4px;"
                    >
                      1
                    </div>
                  </div>
                  <div
                    class="cm-gutter cm-foldGutter"
                  >
                    <div
                      class="cm-gutterElement"
                      style="height: 0px; visibility: hidden; pointer-events: none;"
                    >
                      <span
                        title="Unfold line"
                      >
                        ›
                      </span>
                    </div>
                    <div
                      class="cm-gutterElement cm-activeLineGutter"
                      style="height: 14px; margin-top: 4px;"
                    />
                  </div>
                </div>
                <div
                  aria-multiline="true"
                  autocapitalize="off"
                  autocorrect="off"
                  class="cm-content"
                  contenteditable="true"
                  data-language="json"
                  role="textbox"
                  spellcheck="false"
                  style="tab-size: 4;"
                  translate="no"
                >
                  <div
                    class="cm-activeLine cm-line"
                  >
                    <br />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="cm-layer cm-layer-above cm-cursorLayer"
                  style="z-index: 150; animation-duration: 1200ms;"
                />
                <div
                  aria-hidden="true"
                  class="cm-layer cm-selectionLayer"
                  style="z-index: -2;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bg-red-600 m-1 mt-2 text-center text-white"
      />
    </div>
    <div
      class="flex justify-between bg-blue-300 p-5 dark:bg-gray-700"
    >
      <a
        href="https://github.com/marabesi/json-tool/blob/main/LICENSE.md"
        rel="noreferrer"
        target="_blank"
      >
        CC0 1.0 Universal
      </a>
      <a
        class="flex items-center"
        data-testid="found-issue"
        href="https://github.com/marabesi/json-tool/issues"
        rel="noreferrer"
        target="_blank"
      >
        <svg
          class="mr-2"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M511.988 288.9c-.478 17.43-15.217 31.1-32.653 31.1H424v16c0 21.864-4.882 42.584-13.6 61.145l60.228 60.228c12.496 12.497 12.496 32.758 0 45.255-12.498 12.497-32.759 12.496-45.256 0l-54.736-54.736C345.886 467.965 314.351 480 280 480V236c0-6.627-5.373-12-12-12h-24c-6.627 0-12 5.373-12 12v244c-34.351 0-65.886-12.035-90.636-32.108l-54.736 54.736c-12.498 12.497-32.759 12.496-45.256 0-12.496-12.497-12.496-32.758 0-45.255l60.228-60.228C92.882 378.584 88 357.864 88 336v-16H32.666C15.23 320 .491 306.33.013 288.9-.484 270.816 14.028 256 32 256h56v-58.745l-46.628-46.628c-12.496-12.497-12.496-32.758 0-45.255 12.498-12.497 32.758-12.497 45.256 0L141.255 160h229.489l54.627-54.627c12.498-12.497 32.758-12.497 45.256 0 12.496 12.497 12.496 32.758 0 45.255L424 197.255V256h56c17.972 0 32.484 14.816 31.988 32.9zM257 0c-61.856 0-112 50.144-112 112h224C369 50.144 318.856 0 257 0z"
          />
        </svg>
         Found an issue?
      </a>
    </div>
  </div>
</div>
`;

exports[`dark mode when preferred dark mode is on should enable dark mode by default 1`] = `
<div
  class="flex flex-col dark"
  data-testid="app-container"
>
  <div
    class="bg-blue-400 h-screen text-gray-100 dark:text-gray-400 dark:bg-gray-600"
  >
    <div
      class="bg-blue-900 flex justify-between p-5 dark:bg-gray-700"
    >
      <div
        class="flex"
      >
        <h2
          class="text-yellow-400 font-bold"
        >
          <a
            data-testid="to-home"
            href="#/"
          >
            JSON tool
          </a>
        </h2>
         |
        <a
          href="https://github.com/marabesi/json-tool"
          rel="noreferrer"
          target="_blank"
        >
          by marabesi
        </a>
        <a
          class="ml-14"
          href="https://github.com/marabesi/json-tool/discussions/72"
          rel="noreferrer"
          target="_blank"
        >
          What feature are you missing?
        </a>
      </div>
      <div
        class="flex items-center"
      >
        <div
          class="mr-5"
          style="position: relative; display: inline-block; text-align: left; opacity: 1; direction: ltr; border-radius: 9px; transition: opacity 0.25s; user-select: none;"
        >
          <div
            class="react-switch-bg"
            style="height: 18px; width: 50px; margin: 0px; position: relative; border-radius: 9px; cursor: pointer; transition: background 0.25s; background: rgb(30, 58, 138);"
          />
          <div
            class="react-switch-handle"
            style="height: 16px; width: 16px; background: rgb(255, 255, 255); display: inline-block; cursor: pointer; border-radius: 50%; position: absolute; transform: translateX(33px); top: 1px; outline: 0; border: 0px; transition: background-color 0.25s, transform 0.25s, box-shadow 0.15s;"
          />
          <input
            aria-checked="true"
            data-testid="dark-mode"
            role="switch"
            style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
            type="checkbox"
          />
        </div>
        <a
          class="flex items-center mr-5"
          data-testid="settings"
          href="#/settings"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M494.2 221.9l-59.8-40.5 13.7-71c2.6-13.2-1.6-26.8-11.1-36.4-9.6-9.5-23.2-13.7-36.2-11.1l-70.9 13.7-40.4-59.9c-15.1-22.3-51.9-22.3-67 0l-40.4 59.9-70.8-13.7C98 60.4 84.5 64.5 75 74.1c-9.5 9.6-13.7 23.1-11.1 36.3l13.7 71-59.8 40.5C6.6 229.5 0 242 0 255.5s6.7 26 17.8 33.5l59.8 40.5-13.7 71c-2.6 13.2 1.6 26.8 11.1 36.3 9.5 9.5 22.9 13.7 36.3 11.1l70.8-13.7 40.4 59.9C230 505.3 242.6 512 256 512s26-6.7 33.5-17.8l40.4-59.9 70.9 13.7c13.4 2.7 26.8-1.6 36.3-11.1 9.5-9.5 13.6-23.1 11.1-36.3l-13.7-71 59.8-40.5c11.1-7.5 17.8-20.1 17.8-33.5-.1-13.6-6.7-26.1-17.9-33.7zm-112.9 85.6l17.6 91.2-91-17.6L256 458l-51.9-77-90.9 17.6 17.6-91.2-76.8-52 76.8-52-17.6-91.2 91 17.6L256 53l51.9 76.9 91-17.6-17.6 91.1 76.8 52-76.8 52.1zM256 152c-57.3 0-104 46.7-104 104s46.7 104 104 104 104-46.7 104-104-46.7-104-104-104zm0 160c-30.9 0-56-25.1-56-56s25.1-56 56-56 56 25.1 56 56-25.1 56-56 56z"
            />
          </svg>
        </a>
        <a
          class="flex items-center"
          data-testid="buy-me-a-coffee"
          href="https://www.buymeacoffee.com/marabesi"
          rel="noreferrer"
          target="_blank"
        >
          <svg
            class="mr-2"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 640 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
            />
          </svg>
          <span>
            Buy me a coffee
          </span>
        </a>
      </div>
    </div>
    <div
      class="p-1 mb-8 pb-8 h-full"
      style="height: 80vh;"
    >
      <label
        for="is-validate-json"
      >
        validate json
      </label>
      <input
        checked=""
        data-testid="is-validate-json"
        id="is-validate-json"
        type="checkbox"
      />
      <div
        class="flex h-full justify-center p-1"
        data-testid="editor-container"
      >
        <div
          class="flex flex-col h-full m-1"
          style="width: 49vw;"
        >
          <div
            class="flex w-full justify-start items-center m-2 ml-0 h-10"
          >
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none hover:bg-blue-800 dark:hover:bg-gray-800 "
              data-testid="search-json"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
            </button>
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none cursor-not-allowed ml-0 flex items-center"
              data-testid="paste-from-clipboard"
              disabled=""
              title="Paste from clipboard is disabled due lack of browser support"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 384 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M336 64h-80c0-35.3-28.7-64-64-64s-64 28.7-64 64H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48zM192 40c13.3 0 24 10.7 24 24s-10.7 24-24 24-24-10.7-24-24 10.7-24 24-24zm144 418c0 3.3-2.7 6-6 6H54c-3.3 0-6-2.7-6-6V118c0-3.3 2.7-6 6-6h42v36c0 6.6 5.4 12 12 12h168c6.6 0 12-5.4 12-12v-36h42c3.3 0 6 2.7 6 6z"
                />
              </svg>
              Paste from clipboard
            </button>
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none hover:bg-blue-800 dark:hover:bg-gray-800 ml-0 flex items-center"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 384 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M128.3 160v32h32v-32zm64-96h-32v32h32zm-64 32v32h32V96zm64 32h-32v32h32zm177.6-30.1L286 14C277 5 264.8-.1 252.1-.1H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48V131.9c0-12.7-5.1-25-14.1-34zM256 51.9l76.1 76.1H256zM336 464H48V48h79.7v16h32V48H208v104c0 13.3 10.7 24 24 24h104zM194.2 265.7c-1.1-5.6-6-9.7-11.8-9.7h-22.1v-32h-32v32l-19.7 97.1C102 385.6 126.8 416 160 416c33.1 0 57.9-30.2 51.5-62.6zm-33.9 124.4c-17.9 0-32.4-12.1-32.4-27s14.5-27 32.4-27 32.4 12.1 32.4 27-14.5 27-32.4 27zm32-198.1h-32v32h32z"
                />
              </svg>
              <input
                accept="application/json"
                data-testid="upload-json"
                type="file"
              />
            </button>
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none hover:bg-blue-800 dark:hover:bg-gray-800 flex items-center"
              data-testid="clean"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M268 416h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12zM432 80h-82.41l-34-56.7A48 48 0 0 0 274.41 0H173.59a48 48 0 0 0-41.16 23.3L98.41 80H16A16 16 0 0 0 0 96v16a16 16 0 0 0 16 16h16v336a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128h16a16 16 0 0 0 16-16V96a16 16 0 0 0-16-16zM171.84 50.91A6 6 0 0 1 177 48h94a6 6 0 0 1 5.15 2.91L293.61 80H154.39zM368 464H80V128h288zm-212-48h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12z"
                />
              </svg>
              Delete all
            </button>
          </div>
          <textarea
            class="hidden"
            data-testid="raw-json"
          />
          <div
            class="cm-theme-dark  h-full"
            data-testid="json"
            style="background-color: rgb(229, 231, 235); overflow-y: hidden; font-family: ui-monospace,SFMono-Regular,SF Mono,Consolas,Liberation Mono,Menlo,monospace; font-size: 12px;"
          >
            <div
              class="cm-editor ͼ1 ͼ3 ͼ4 ͼ1r ͼo"
            >
              <div
                aria-live="polite"
                style="position: fixed; top: -10000px;"
              />
              <div
                class="cm-scroller"
                tabindex="-1"
              >
                <div
                  aria-hidden="true"
                  class="cm-gutters"
                  style="min-height: 14px; position: sticky;"
                >
                  <div
                    class="cm-gutter cm-lineNumbers"
                  >
                    <div
                      class="cm-gutterElement"
                      style="height: 0px; visibility: hidden; pointer-events: none;"
                    >
                      9
                    </div>
                    <div
                      class="cm-gutterElement cm-activeLineGutter"
                      style="height: 14px;"
                    >
                      1
                    </div>
                  </div>
                  <div
                    class="cm-gutter cm-foldGutter"
                  >
                    <div
                      class="cm-gutterElement"
                      style="height: 0px; visibility: hidden; pointer-events: none;"
                    >
                      <span
                        title="Unfold line"
                      >
                        ›
                      </span>
                    </div>
                    <div
                      class="cm-gutterElement cm-activeLineGutter"
                      style="height: 14px;"
                    />
                  </div>
                </div>
                <div
                  aria-multiline="true"
                  autocapitalize="off"
                  autocorrect="off"
                  class="cm-content"
                  contenteditable="true"
                  data-language="json"
                  role="textbox"
                  spellcheck="false"
                  style="tab-size: 4;"
                  translate="no"
                >
                  <div
                    class="cm-activeLine cm-line"
                  >
                    <br />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="cm-layer cm-layer-above cm-cursorLayer"
                  style="z-index: 150; animation-duration: 1200ms;"
                />
                <div
                  aria-hidden="true"
                  class="cm-layer cm-selectionLayer"
                  style="z-index: -2;"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="w-12 flex justify-center items-center"
        >
          <div
            class="h-6 w-6"
          />
        </div>
        <div
          class="flex flex-col h-full m-1"
          style="width: 49vw;"
        >
          <div
            class="flex justify-start items-center m-2 ml-0 h-10"
          >
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none hover:bg-blue-800 dark:hover:bg-gray-800 "
              data-testid="search-result"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
            </button>
            <div
              class="flex items-center"
            >
              <span
                class="mr-2"
              >
                Space tabulation
              </span>
              <input
                class="w-10 rounded mr-2 p-1 bg-blue-300 dark:bg-gray-500"
                data-testid="space-size"
                type="text"
                value="2"
              />
            </div>
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none hover:bg-blue-800 dark:hover:bg-gray-800 flex items-center"
              data-testid="clean-spaces"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 640 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M576 64H205.26A63.97 63.97 0 0 0 160 82.75L9.37 233.37c-12.5 12.5-12.5 32.76 0 45.25L160 429.25c12 12 28.28 18.75 45.25 18.75H576c35.35 0 64-28.65 64-64V128c0-35.35-28.65-64-64-64zm-84.69 254.06c6.25 6.25 6.25 16.38 0 22.63l-22.62 22.62c-6.25 6.25-16.38 6.25-22.63 0L384 301.25l-62.06 62.06c-6.25 6.25-16.38 6.25-22.63 0l-22.62-22.62c-6.25-6.25-6.25-16.38 0-22.63L338.75 256l-62.06-62.06c-6.25-6.25-6.25-16.38 0-22.63l22.62-22.62c6.25-6.25 16.38-6.25 22.63 0L384 210.75l62.06-62.06c6.25-6.25 16.38-6.25 22.63 0l22.62 22.62c6.25 6.25 6.25 16.38 0 22.63L429.25 256l62.06 62.06z"
                />
              </svg>
              Clean spaces
            </button>
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none hover:bg-blue-800 dark:hover:bg-gray-800 flex items-center"
              data-testid="clean-new-lines"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 640 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M257.981 272.971L63.638 467.314c-9.373 9.373-24.569 9.373-33.941 0L7.029 444.647c-9.357-9.357-9.375-24.522-.04-33.901L161.011 256 6.99 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L257.981 239.03c9.373 9.372 9.373 24.568 0 33.941zM640 456v-32c0-13.255-10.745-24-24-24H312c-13.255 0-24 10.745-24 24v32c0 13.255 10.745 24 24 24h304c13.255 0 24-10.745 24-24z"
                />
              </svg>
              Clean new lines
            </button>
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none hover:bg-blue-800 dark:hover:bg-gray-800 flex items-center"
              data-testid="clean-new-lines-and-spaces"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 640 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M192 256c61.9 0 112-50.1 112-112S253.9 32 192 32 80 82.1 80 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C51.6 288 0 339.6 0 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zM480 256c53 0 96-43 96-96s-43-96-96-96-96 43-96 96 43 96 96 96zm48 32h-3.8c-13.9 4.8-28.6 8-44.2 8s-30.3-3.2-44.2-8H432c-20.4 0-39.2 5.9-55.7 15.4 24.4 26.3 39.7 61.2 39.7 99.8v38.4c0 2.2-.5 4.3-.6 6.4H592c26.5 0 48-21.5 48-48 0-61.9-50.1-112-112-112z"
                />
              </svg>
              Clean new lines and spaces
            </button>
            <button
              class="bg-transparent border-0 cursor-pointer p-2 outline-none cursor-not-allowed flex items-center"
              data-testid="copy-json"
              disabled=""
              title="Copy json is disabled due lack of browser support"
            >
              <svg
                class="mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
                />
              </svg>
              Copy json
            </button>
          </div>
          <textarea
            class="hidden"
            data-testid="raw-result"
          />
          <div
            class="cm-theme-dark result h-full"
            data-testid="result"
            style="background-color: rgb(229, 231, 235); overflow-y: hidden; font-family: ui-monospace,SFMono-Regular,SF Mono,Consolas,Liberation Mono,Menlo,monospace; font-size: 12px;"
          >
            <div
              class="cm-editor ͼ1 ͼ3 ͼ4 ͼ1s ͼo"
            >
              <div
                aria-live="polite"
                style="position: fixed; top: -10000px;"
              />
              <div
                class="cm-scroller"
                tabindex="-1"
              >
                <div
                  aria-hidden="true"
                  class="cm-gutters"
                  style="min-height: 14px; position: sticky;"
                >
                  <div
                    class="cm-gutter cm-lineNumbers"
                  >
                    <div
                      class="cm-gutterElement"
                      style="height: 0px; visibility: hidden; pointer-events: none;"
                    >
                      9
                    </div>
                    <div
                      class="cm-gutterElement cm-activeLineGutter"
                      style="height: 14px;"
                    >
                      1
                    </div>
                  </div>
                  <div
                    class="cm-gutter cm-foldGutter"
                  >
                    <div
                      class="cm-gutterElement"
                      style="height: 0px; visibility: hidden; pointer-events: none;"
                    >
                      <span
                        title="Unfold line"
                      >
                        ›
                      </span>
                    </div>
                    <div
                      class="cm-gutterElement cm-activeLineGutter"
                      style="height: 14px;"
                    />
                  </div>
                </div>
                <div
                  aria-multiline="true"
                  autocapitalize="off"
                  autocorrect="off"
                  class="cm-content"
                  contenteditable="true"
                  data-language="json"
                  role="textbox"
                  spellcheck="false"
                  style="tab-size: 4;"
                  translate="no"
                >
                  <div
                    class="cm-activeLine cm-line"
                  >
                    <br />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="cm-layer cm-layer-above cm-cursorLayer"
                  style="z-index: 150; animation-duration: 1200ms;"
                />
                <div
                  aria-hidden="true"
                  class="cm-layer cm-selectionLayer"
                  style="z-index: -2;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bg-red-600 m-1 mt-2 text-center text-white"
      />
    </div>
    <div
      class="flex justify-between bg-blue-300 p-5 dark:bg-gray-700"
    >
      <a
        href="https://github.com/marabesi/json-tool/blob/main/LICENSE.md"
        rel="noreferrer"
        target="_blank"
      >
        CC0 1.0 Universal
      </a>
      <a
        class="flex items-center"
        data-testid="found-issue"
        href="https://github.com/marabesi/json-tool/issues"
        rel="noreferrer"
        target="_blank"
      >
        <svg
          class="mr-2"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M511.988 288.9c-.478 17.43-15.217 31.1-32.653 31.1H424v16c0 21.864-4.882 42.584-13.6 61.145l60.228 60.228c12.496 12.497 12.496 32.758 0 45.255-12.498 12.497-32.759 12.496-45.256 0l-54.736-54.736C345.886 467.965 314.351 480 280 480V236c0-6.627-5.373-12-12-12h-24c-6.627 0-12 5.373-12 12v244c-34.351 0-65.886-12.035-90.636-32.108l-54.736 54.736c-12.498 12.497-32.759 12.496-45.256 0-12.496-12.497-12.496-32.758 0-45.255l60.228-60.228C92.882 378.584 88 357.864 88 336v-16H32.666C15.23 320 .491 306.33.013 288.9-.484 270.816 14.028 256 32 256h56v-58.745l-46.628-46.628c-12.496-12.497-12.496-32.758 0-45.255 12.498-12.497 32.758-12.497 45.256 0L141.255 160h229.489l54.627-54.627c12.498-12.497 32.758-12.497 45.256 0 12.496 12.497 12.496 32.758 0 45.255L424 197.255V256h56c17.972 0 32.484 14.816 31.988 32.9zM257 0c-61.856 0-112 50.144-112 112h224C369 50.144 318.856 0 257 0z"
          />
        </svg>
         Found an issue?
      </a>
    </div>
  </div>
</div>
`;
